--- a/ResumeForgeAI/src/main/resources/application.properties
+++ b/ResumeForgeAI/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ResumeForgeAI
+
+server.port=8080
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Gemini AI Configuration
+gemini.api.key=AIzaSyDFSAYfnE0Iz1c4RENt7drxtkZkekZC84I
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models
+gemini.api.model=gemini-pro
