--- a/ResumeForgeAI/src/main/resources/application.properties
+++ b/ResumeForgeAI/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.servlet.multipart.max-request-size=10MB
 # Gemini AI Configuration
 gemini.api.key=AIzaSyDFSAYfnE0Iz1c4RENt7drxtkZkekZC84I
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models
-gemini.api.model=gemini-pro
+gemini.api.model=gemini-1.5-flash
